test for core-libs