@@ -29,7 +29,7 @@
  * @modules jdk.compiler
  *          jdk.zipfs
  * @compile -XDignore.symbol.file LambdaAccessControlDoPrivilegedTest.java LUtils.java
- * @run main/othervm LambdaAccessControlDoPrivilegedTest
+ * @run main/othervm -Djava.security.manager=allow LambdaAccessControlDoPrivilegedTest
  */
 import java.io.File;
 import java.util.ArrayList;
@@ -76,6 +76,7 @@ public class LambdaAccessControlDoPrivilegedTest extends LUtils {
         doprivJava.delete();
         doprivClass.delete();
         tr = doExec(JAVA_CMD.getAbsolutePath(),
+                    "-Djava.security.manager=allow",
                     "-Xbootclasspath/a:foo.jar",
                     "-cp", ".", "Bar");
         tr.assertZero("testDoPrivileged fails");
